fixing svg styles overlap

--- a/src/Styles/general.scss
+++ b/src/Styles/general.scss
@@ -24,7 +24,7 @@ nav ul li {
 }
 
 nav ul li a.active {
-    color: red;
+    color: $green;
 }
 
 .headerLogo_image svg {
